.config/relics/ernest/tests/snapshots/render__focus-empty.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  54.5%   (prose 272 / base 499 chars)
  docs prose 183 chars — 88.4% of source code

  ranking 0 of 5 measured files — focus=nothing/** matched nothing
  5 files measured, 2 unsupported (json 2)
