.config/relics/ernest/tests/snapshots/render__focus.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  54.5%   (prose 272 / base 499 chars)
  docs prose 183 chars — 88.4% of source code

  density  prose  code  file
    34.2%     50    96  tests/render/tree/app.php
     5.4%      5    88  tests/render/tree/lib.php

  ranking 2 of 5 measured files, prose 55 chars — focus=*.php
  5 files measured, 2 unsupported (json 2)
