.config/relics/ernest/tests/snapshots/render__trace.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  64.8%   (prose 79 / base 122 chars)

  language  unread  measured  error nodes  missing nodes
  css            1         1            1              0
  php            0         1            0              0

  diagnostic   path                               reason
  unread       tests/render/edge/broken.css       the grammar produced an ERROR or MISSING node
  excluded     tests/render/edge/corpus/story.md  a declared corpus
  unsupported  tests/render/edge/a.vim            no profile claims this extension
  unsupported  tests/render/edge/b.vim            no profile claims this extension
  unsupported  tests/render/edge/c.log            no profile claims this extension
  unsupported  tests/render/edge/d.map            no profile claims this extension
  unsupported  tests/render/edge/e.bin            no profile claims this extension
  unsupported  tests/render/edge/f.tmp            no profile claims this extension
  unsupported  tests/render/edge/g.rst            no profile claims this extension

  2 files measured, 7 unsupported (vim 2, bin 1, log 1, map 1, rst 1, tmp 1)
  measuring tests/render/edge
  --scope local — locally-excluded files included, gitignored files not
  tests/render/edge/.ernestignore applied — 1 file excluded as a declared corpus
  --by file|section|cohort|language, --top N, --json
