.config/relics/ernest/tests/snapshots/render__verbose-edge.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  64.8%   (prose 79 / base 122 chars)

  2 files measured, 7 unsupported (vim 2, bin 1, log 1, map 1, rst 1, tmp 1)
  measuring tests/render/edge
  --scope local — locally-excluded files included, gitignored files not
  tests/render/edge/.ernestignore applied — 1 file excluded as a declared corpus
  --by file|section|cohort|language, --top N, --json
